[package]
name = "rustmsg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
tl = "0.7.7"
regex = "*"